fixed bug on mobile devices requiring long touch to open menus

--- a/meanjs/public/modules/core/css/core.css
+++ b/meanjs/public/modules/core/css/core.css
@@ -54,3 +54,7 @@
 .cursor-pointer {
     cursor: pointer;
 }
+
+.no-click {
+    pointer-events: none;
+}
